fix: general import adjustments

--- a/ANN/Option_C/ANN_with_BERT_with_Stemming.ipynb
+++ b/ANN/Option_C/ANN_with_BERT_with_Stemming.ipynb
@@ -26,66 +26,7 @@
     "## Results\n",
     "\n",
     "\n",
-    "Training time:\n",
-    "\n",
-    "## Model\n",
-    "Link to model: (hosted on OneDrive)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "o41yey4xPvVp",
-    "outputId": "b99e086d-8f18-477e-dbd0-bc4d29b3a8c2"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mounted at /content/drive/\n",
-      "/content/drive/MyDrive\n",
-      "Sat May 14 11:33:38 2022       \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
-      "|-------------------------------+----------------------+----------------------+\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-      "|                               |                      |               MIG M. |\n",
-      "|===============================+======================+======================|\n",
-      "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
-      "| N/A   40C    P0    27W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
-      "|                               |                      |                  N/A |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "                                                                               \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| Processes:                                                                  |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
-      "|        ID   ID                                                   Usage      |\n",
-      "|=============================================================================|\n",
-      "|  No running processes found                                                 |\n",
-      "+-----------------------------------------------------------------------------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    from google.colab import drive\n",
-    "    drive.mount('/content/drive/')\n",
-    "    %cd '/content/drive/MyDrive/'\n",
-    "\n",
-    "    gpu_info = !nvidia-smi\n",
-    "    gpu_info = '\\n'.join(gpu_info)\n",
-    "    if gpu_info.find('failed') >= 0:\n",
-    "      print('Not connected to a GPU')\n",
-    "    else:\n",
-    "      print(gpu_info)\n",
-    "except ImportError as e:\n",
-    "    pass"
+    "Training time:\n"
    ]
   },
   {
@@ -947,11 +888,18 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit (system)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d3a42d2e95199c7e2860bfa859105705b4de6fb30810a8e3e43082051688158b"
+   }
   }
  },
  "nbformat": 4,
