--- a/ANN/Option_A/ANN-FINAL.ipynb
+++ b/ANN/Option_A/ANN-FINAL.ipynb
@@ -24,62 +24,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Gr11-PP49brt",
-        "outputId": "e31b0cfd-c3a3-4a48-cf32-f24c28ea8fdc"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive/\n",
-            "/content/drive/MyDrive\n",
-            "Fri May 27 05:49:14 2022       \n",
-            "+-----------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
-            "|-------------------------------+----------------------+----------------------+\n",
-            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                               |                      |               MIG M. |\n",
-            "|===============================+======================+======================|\n",
-            "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   34C    P8    11W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
-            "|                               |                      |                  N/A |\n",
-            "+-------------------------------+----------------------+----------------------+\n",
-            "                                                                               \n",
-            "+-----------------------------------------------------------------------------+\n",
-            "| Processes:                                                                  |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
-            "|        ID   ID                                                   Usage      |\n",
-            "|=============================================================================|\n",
-            "|  No running processes found                                                 |\n",
-            "+-----------------------------------------------------------------------------+\n"
-          ]
-        }
-      ],
-      "source": [
-        "try:\n",
-        "    from google.colab import drive\n",
-        "    drive.mount('/content/drive/')\n",
-        "    %cd '/content/drive/MyDrive/'\n",
-        "\n",
-        "    gpu_info = !nvidia-smi\n",
-        "    gpu_info = '\\n'.join(gpu_info)\n",
-        "    if gpu_info.find('failed') >= 0:\n",
-        "      print('Not connected to a GPU')\n",
-        "    else:\n",
-        "      print(gpu_info)\n",
-        "except ImportError as e:\n",
-        "    pass"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "CtKSRqGc9dDc"
@@ -904,17 +848,17 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.9.12 ('base')",
+      "display_name": "Python 3.10.6 64-bit (system)",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.9.12"
+      "version": "3.10.6"
     },
     "vscode": {
       "interpreter": {
-        "hash": "d521d0460b469cedfe88f2a57477639c9d10458bc31d90a4350c0e6e42428104"
+        "hash": "d3a42d2e95199c7e2860bfa859105705b4de6fb30810a8e3e43082051688158b"
       }
     },
     "widgets": {
