--- a/ANN/Option_A/ANN_with_BERT_add_BERT_seperator.ipynb
+++ b/ANN/Option_A/ANN_with_BERT_add_BERT_seperator.ipynb
@@ -24,62 +24,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "o41yey4xPvVp",
-        "outputId": "52e0269b-61d7-4f70-8d49-8869a0368b53"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive/\n",
-            "/content/drive/MyDrive\n",
-            "Thu May 26 20:28:36 2022       \n",
-            "+-----------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
-            "|-------------------------------+----------------------+----------------------+\n",
-            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                               |                      |               MIG M. |\n",
-            "|===============================+======================+======================|\n",
-            "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   36C    P0    29W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
-            "|                               |                      |                  N/A |\n",
-            "+-------------------------------+----------------------+----------------------+\n",
-            "                                                                               \n",
-            "+-----------------------------------------------------------------------------+\n",
-            "| Processes:                                                                  |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
-            "|        ID   ID                                                   Usage      |\n",
-            "|=============================================================================|\n",
-            "|  No running processes found                                                 |\n",
-            "+-----------------------------------------------------------------------------+\n"
-          ]
-        }
-      ],
-      "source": [
-        "try:\n",
-        "    from google.colab import drive\n",
-        "    drive.mount('/content/drive/')\n",
-        "    %cd '/content/drive/MyDrive/'\n",
-        "\n",
-        "    gpu_info = !nvidia-smi\n",
-        "    gpu_info = '\\n'.join(gpu_info)\n",
-        "    if gpu_info.find('failed') >= 0:\n",
-        "      print('Not connected to a GPU')\n",
-        "    else:\n",
-        "      print(gpu_info)\n",
-        "except ImportError as e:\n",
-        "    pass"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "zPNfsRkESPvi"
@@ -94,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -102,39 +46,120 @@
           "output_type": "stream",
           "text": [
             "Collecting tensorflow\n",
-            "  Downloading tensorflow-2.10.0-cp310-cp310-win_amd64.whl (455.9 MB)\n",
-            "     -------------------------------------- 455.9/455.9 MB 5.8 MB/s eta 0:00:00\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "ERROR: Could not find a version that satisfies the requirement as (from versions: none)\n",
-            "ERROR: No matching distribution found for as\n"
+            "  Using cached tensorflow-2.10.0-cp310-cp310-win_amd64.whl (455.9 MB)\n",
+            "Collecting gast<=0.4.0,>=0.2.1\n",
+            "  Downloading gast-0.4.0-py3-none-any.whl (9.8 kB)\n",
+            "Collecting absl-py>=1.0.0\n",
+            "  Downloading absl_py-1.2.0-py3-none-any.whl (123 kB)\n",
+            "     -------------------------------------- 123.4/123.4 kB 3.6 MB/s eta 0:00:00\n",
+            "Collecting termcolor>=1.1.0\n",
+            "  Downloading termcolor-2.0.1-py3-none-any.whl (5.4 kB)\n",
+            "Collecting tensorflow-estimator<2.11,>=2.10.0\n",
+            "  Downloading tensorflow_estimator-2.10.0-py2.py3-none-any.whl (438 kB)\n",
+            "     -------------------------------------- 438.7/438.7 kB 9.1 MB/s eta 0:00:00\n",
+            "Collecting tensorflow-io-gcs-filesystem>=0.23.1\n",
+            "  Downloading tensorflow_io_gcs_filesystem-0.27.0-cp310-cp310-win_amd64.whl (1.5 MB)\n",
+            "     ---------------------------------------- 1.5/1.5 MB 15.7 MB/s eta 0:00:00\n",
+            "Requirement already satisfied: typing-extensions>=3.6.6 in c:\\users\\ayhamshalaby\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from tensorflow) (4.3.0)\n",
+            "Collecting keras-preprocessing>=1.1.1\n",
+            "  Downloading Keras_Preprocessing-1.1.2-py2.py3-none-any.whl (42 kB)\n",
+            "     ---------------------------------------- 42.6/42.6 kB ? eta 0:00:00\n",
+            "Collecting grpcio<2.0,>=1.24.3\n",
+            "  Downloading grpcio-1.49.1-cp310-cp310-win_amd64.whl (3.6 MB)\n",
+            "     ---------------------------------------- 3.6/3.6 MB 13.6 MB/s eta 0:00:00\n",
+            "Collecting google-pasta>=0.1.1\n",
+            "  Downloading google_pasta-0.2.0-py3-none-any.whl (57 kB)\n",
+            "     ---------------------------------------- 57.5/57.5 kB ? eta 0:00:00\n",
+            "Collecting tensorboard<2.11,>=2.10\n",
+            "  Downloading tensorboard-2.10.1-py3-none-any.whl (5.9 MB)\n",
+            "     ---------------------------------------- 5.9/5.9 MB 12.9 MB/s eta 0:00:00\n",
+            "Collecting astunparse>=1.6.0\n",
+            "  Downloading astunparse-1.6.3-py2.py3-none-any.whl (12 kB)\n",
+            "Collecting wrapt>=1.11.0\n",
+            "  Downloading wrapt-1.14.1-cp310-cp310-win_amd64.whl (35 kB)\n",
+            "Requirement already satisfied: numpy>=1.20 in c:\\users\\ayhamshalaby\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from tensorflow) (1.23.1)\n",
+            "Collecting keras<2.11,>=2.10.0\n",
+            "  Downloading keras-2.10.0-py2.py3-none-any.whl (1.7 MB)\n",
+            "     ---------------------------------------- 1.7/1.7 MB 13.4 MB/s eta 0:00:00\n",
+            "Collecting opt-einsum>=2.3.2\n",
+            "  Downloading opt_einsum-3.3.0-py3-none-any.whl (65 kB)\n",
+            "     ---------------------------------------- 65.5/65.5 kB ? eta 0:00:00\n",
+            "Collecting h5py>=2.9.0\n",
+            "  Downloading h5py-3.7.0-cp310-cp310-win_amd64.whl (2.6 MB)\n",
+            "     ---------------------------------------- 2.6/2.6 MB 12.9 MB/s eta 0:00:00\n",
+            "Requirement already satisfied: six>=1.12.0 in c:\\users\\ayhamshalaby\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from tensorflow) (1.16.0)\n",
+            "Collecting protobuf<3.20,>=3.9.2\n",
+            "  Downloading protobuf-3.19.6-cp310-cp310-win_amd64.whl (895 kB)\n",
+            "     ------------------------------------- 895.7/895.7 kB 18.8 MB/s eta 0:00:00\n",
+            "Collecting libclang>=13.0.0\n",
+            "  Downloading libclang-14.0.6-py2.py3-none-win_amd64.whl (14.2 MB)\n",
+            "     --------------------------------------- 14.2/14.2 MB 12.6 MB/s eta 0:00:00\n",
+            "Requirement already satisfied: setuptools in c:\\users\\ayhamshalaby\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from tensorflow) (63.2.0)\n",
+            "Collecting flatbuffers>=2.0\n",
+            "  Downloading flatbuffers-22.9.24-py2.py3-none-any.whl (26 kB)\n",
+            "Requirement already satisfied: packaging in c:\\users\\ayhamshalaby\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from tensorflow) (21.3)\n",
+            "Collecting wheel<1.0,>=0.23.0\n",
+            "  Downloading wheel-0.37.1-py2.py3-none-any.whl (35 kB)\n",
+            "Collecting google-auth<3,>=1.6.3\n",
+            "  Downloading google_auth-2.12.0-py2.py3-none-any.whl (169 kB)\n",
+            "     ------------------------------------- 169.8/169.8 kB 10.0 MB/s eta 0:00:00\n",
+            "Requirement already satisfied: requests<3,>=2.21.0 in c:\\users\\ayhamshalaby\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from tensorboard<2.11,>=2.10->tensorflow) (2.28.0)\n",
+            "Collecting tensorboard-plugin-wit>=1.6.0\n",
+            "  Downloading tensorboard_plugin_wit-1.8.1-py3-none-any.whl (781 kB)\n",
+            "     -------------------------------------- 781.3/781.3 kB 9.9 MB/s eta 0:00:00\n",
+            "Collecting tensorboard-data-server<0.7.0,>=0.6.0\n",
+            "  Downloading tensorboard_data_server-0.6.1-py3-none-any.whl (2.4 kB)\n",
+            "Collecting google-auth-oauthlib<0.5,>=0.4.1\n",
+            "  Downloading google_auth_oauthlib-0.4.6-py2.py3-none-any.whl (18 kB)\n",
+            "Collecting markdown>=2.6.8\n",
+            "  Downloading Markdown-3.4.1-py3-none-any.whl (93 kB)\n",
+            "     ---------------------------------------- 93.3/93.3 kB 5.5 MB/s eta 0:00:00\n",
+            "Collecting werkzeug>=1.0.1\n",
+            "  Downloading Werkzeug-2.2.2-py3-none-any.whl (232 kB)\n",
+            "     ------------------------------------- 232.7/232.7 kB 13.9 MB/s eta 0:00:00\n",
+            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in c:\\users\\ayhamshalaby\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from packaging->tensorflow) (3.0.9)\n",
+            "Collecting cachetools<6.0,>=2.0.0\n",
+            "  Downloading cachetools-5.2.0-py3-none-any.whl (9.3 kB)\n",
+            "Collecting rsa<5,>=3.1.4\n",
+            "  Downloading rsa-4.9-py3-none-any.whl (34 kB)\n",
+            "Collecting pyasn1-modules>=0.2.1\n",
+            "  Downloading pyasn1_modules-0.2.8-py2.py3-none-any.whl (155 kB)\n",
+            "     ---------------------------------------- 155.3/155.3 kB ? eta 0:00:00\n",
+            "Collecting requests-oauthlib>=0.7.0\n",
+            "  Downloading requests_oauthlib-1.3.1-py2.py3-none-any.whl (23 kB)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\ayhamshalaby\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard<2.11,>=2.10->tensorflow) (2022.6.15)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\ayhamshalaby\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard<2.11,>=2.10->tensorflow) (1.26.10)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\ayhamshalaby\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard<2.11,>=2.10->tensorflow) (3.3)\n",
+            "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\ayhamshalaby\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from requests<3,>=2.21.0->tensorboard<2.11,>=2.10->tensorflow) (2.0.12)\n",
+            "Requirement already satisfied: MarkupSafe>=2.1.1 in c:\\users\\ayhamshalaby\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from werkzeug>=1.0.1->tensorboard<2.11,>=2.10->tensorflow) (2.1.1)\n",
+            "Collecting pyasn1<0.5.0,>=0.4.6\n",
+            "  Downloading pyasn1-0.4.8-py2.py3-none-any.whl (77 kB)\n",
+            "     ---------------------------------------- 77.1/77.1 kB ? eta 0:00:00\n",
+            "Collecting oauthlib>=3.0.0\n",
+            "  Downloading oauthlib-3.2.1-py3-none-any.whl (151 kB)\n",
+            "     -------------------------------------- 151.7/151.7 kB 8.8 MB/s eta 0:00:00\n",
+            "Installing collected packages: tensorboard-plugin-wit, pyasn1, libclang, keras, flatbuffers, wrapt, wheel, werkzeug, termcolor, tensorflow-io-gcs-filesystem, tensorflow-estimator, tensorboard-data-server, rsa, pyasn1-modules, protobuf, opt-einsum, oauthlib, markdown, keras-preprocessing, h5py, grpcio, google-pasta, gast, cachetools, absl-py, requests-oauthlib, google-auth, astunparse, google-auth-oauthlib, tensorboard, tensorflow\n",
+            "Successfully installed absl-py-1.2.0 astunparse-1.6.3 cachetools-5.2.0 flatbuffers-22.9.24 gast-0.4.0 google-auth-2.12.0 google-auth-oauthlib-0.4.6 google-pasta-0.2.0 grpcio-1.49.1 h5py-3.7.0 keras-2.10.0 keras-preprocessing-1.1.2 libclang-14.0.6 markdown-3.4.1 oauthlib-3.2.1 opt-einsum-3.3.0 protobuf-3.19.6 pyasn1-0.4.8 pyasn1-modules-0.2.8 requests-oauthlib-1.3.1 rsa-4.9 tensorboard-2.10.1 tensorboard-data-server-0.6.1 tensorboard-plugin-wit-1.8.1 tensorflow-2.10.0 tensorflow-estimator-2.10.0 tensorflow-io-gcs-filesystem-0.27.0 termcolor-2.0.1 werkzeug-2.2.2 wheel-0.37.1 wrapt-1.14.1\n"
           ]
         }
       ],
       "source": [
-        "!pip install tensorflow as tf"
+        "!pip install tensorflow"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "HUKHIT8hSOAH"
       },
       "outputs": [
         {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'tensorflow'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[1;32md:\\Users\\BKU\\ayhamshalaby\\Desktop\\Data mining I\\ANN\\Option_A\\ANN_with_BERT_add_BERT_seperator.ipynb Zelle 5\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Users/BKU/ayhamshalaby/Desktop/Data%20mining%20I/ANN/Option_A/ANN_with_BERT_add_BERT_seperator.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtf\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Users/BKU/ayhamshalaby/Desktop/Data%20mining%20I/ANN/Option_A/ANN_with_BERT_add_BERT_seperator.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow_hub\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mhub\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Users/BKU/ayhamshalaby/Desktop/Data%20mining%20I/ANN/Option_A/ANN_with_BERT_add_BERT_seperator.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow_text\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtext\u001b[39;00m\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\ayhamshalaby\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\requests\\__init__.py:109: RequestsDependencyWarning: urllib3 (1.26.10) or chardet (5.0.0)/charset_normalizer (2.0.12) doesn't match a supported version!\n",
+            "  warnings.warn(\n"
           ]
         }
       ],
@@ -1953,7 +1978,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.9.12 ('base')",
+      "display_name": "Python 3.10.6 64-bit (system)",
       "language": "python",
       "name": "python3"
     },
@@ -1967,11 +1992,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.10.6"
     },
     "vscode": {
       "interpreter": {
-        "hash": "d521d0460b469cedfe88f2a57477639c9d10458bc31d90a4350c0e6e42428104"
+        "hash": "d3a42d2e95199c7e2860bfa859105705b4de6fb30810a8e3e43082051688158b"
       }
     },
     "widgets": {
