--- a/Naive Bayes/NaiveBayes_Multinomial_Final.ipynb
+++ b/Naive Bayes/NaiveBayes_Multinomial_Final.ipynb
@@ -252,16 +252,6 @@
    "source": [
     "import numpy as np\n",
     "from sklearn import preprocessing\n",
-    "#from nltk.stem import PorterStemmer\n",
-    "#from nltk.tokenize import word_tokenize\n",
-    "#import nltk\n",
-    "\n",
-    "# Downloading punkt package\n",
-    "# nltk.download('punkt')\n",
-    "\n",
-    "# Applying PorterStemmer to reduce word back to its root form \n",
-    "#stemmer = PorterStemmer()\n",
-    "#imdb_frame['review'] = imdb_frame['review'].apply(lambda x: ' '.join([stemmer.stem(word) for word in word_tokenize(x)]))\n",
     "\n",
     "# Creating training data\n",
     "imdb_data = imdb_frame.drop(columns=['sentiment'])['review'].values\n",
@@ -300,7 +290,7 @@
     "nb_estimator = MultinomialNB()\n",
     "transformer = TfidfVectorizer(use_idf = False, stop_words='english')\n",
     "\n",
-    "# Splitting data\n",
+    "# Splitting data (Holdout method)\n",
     "train_data, test_data, train_target, test_target = train_test_split(imdb_data, imdb_target, test_size=0.20, random_state = 42)\n",
     "\n",
     "# Define pipeline\n",
@@ -469,14 +459,6 @@
     "print(f\"Recall: {recall}%\")\n",
     "print(f\"F1-Score: {f1_score}%\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3124ea4f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
