--- a/Naive Bayes/NaiveBayes_Multinomial_Final.ipynb
+++ b/Naive Bayes/NaiveBayes_Multinomial_Final.ipynb
@@ -239,8 +239,8 @@
    "id": "6b589a8d",
    "metadata": {},
    "source": [
-    "## Stemming and encoding data / target\n",
-    "As additional preprocessing steps, we are stemming each word to reduce it back to its root form."
+    "## Encoding data / target\n",
+    "As additional preprocessing steps, we are encoding the data / target."
    ]
   },
   {
@@ -253,15 +253,15 @@
     "import numpy as np\n",
     "from sklearn import preprocessing\n",
     "\n",
-    "# Creating training data\n",
+    "# Creating data\n",
     "imdb_data = imdb_frame.drop(columns=['sentiment'])['review'].values\n",
-    "# Creating training target\n",
+    "# Creating target\n",
     "imdb_target = imdb_frame.drop(columns=['review'])\n",
     "\n",
-    "# Initializing a label encoder for the training target\n",
+    "# Initializing a label encoder for the target\n",
     "label_encoder = preprocessing.LabelEncoder()\n",
     "\n",
-    "# Encoding training target\n",
+    "# Encoding target\n",
     "imdb_target = label_encoder.fit_transform(imdb_target.values.ravel())"
    ]
   },
@@ -286,7 +286,7 @@
     "from mlxtend.preprocessing import DenseTransformer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "# Creating classifier and TfidVectorizer to implement stop word removal\n",
+    "# Creating classifier and TfidVectorizer\n",
     "nb_estimator = MultinomialNB()\n",
     "transformer = TfidfVectorizer(use_idf = False, stop_words='english')\n",
     "\n",
